Saturn rings radial texture

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -226,8 +226,9 @@ tex_halo = star16x16.png
 coord_func = saturn_special
 lighting = true
 rings = true
-ring_size = 160000.
-tex_ring = saturn_rings.png
+ring_outer_size = 160000
+ring_inner_size =  80000
+tex_ring = saturn_rings_radial.png
 albedo = 0.50
 rot_periode = 10.65622
 rot_rotation_offset = 358.922
