--- a/data/sky_cultures/Makefile.am
+++ b/data/sky_cultures/Makefile.am
@@ -1,2 +1,2 @@
 pkgdatadir = $(datadir)/@PACKAGE@/data/sky_cultures
-SUBDIRS = polynesian western chinese egyptian
+SUBDIRS = polynesian western chinese egyptian korean
