Use new grid buttons.

--- a/data/sky_cultures/korean/Makefile.am
+++ b/data/sky_cultures/korean/Makefile.am
@@ -1,3 +1,4 @@
 pkgdatadir = $(datadir)/@PACKAGE@/data/sky_cultures/korean
-pkgdata_DATA = constellationship.fab constellation_names.eng.fab info.ini
+pkgdata_DATA = constellationship.fab constellation_names.eng.fab info.ini \
+	constellation_names.exp.fab constellationsart.fab on_korea_constellations.txt star_names.fab
 EXTRA_DIST = $(pkgdata_DATA)
