Fix strange display bug while loading + meteor rate is saved in config file.

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -190,6 +190,7 @@ flag_milky_way                 = true
 milky_way_intensity            = 1
 flag_bright_nebulae            = false
 flag_nebula_ngc                = false
+meteor_rate	                   = 10
 
 [init_location]
 name                           = Paris
