--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -1,5 +1,7 @@
 [guereins]
 name = Guereins
+author = Fabien Chéreau
+description = Guéreins is a small french village in the Saône Valley, 50 km North of Lyon. The mountains in the background are Le Beaujolais, where the famous wine is produced.
 type = old_style
 nbsidetex = 8
 tex0 = landscapes/guereins4.png
