--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -83,6 +83,7 @@ draw_ground_first = 1
 
 [hogerielen]
 name = HogeRielen
+author = Johan Meuris
 type = old_style
 nbsidetex = 7
 tex0 = landscapes/HR7.png
