--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -1,7 +1,7 @@
 [guereins]
 name = Guereins
 author = Fabien Chéreau
-description = Guéreins is a small french village in the Valley of the \nSaône river, 50 km North of Lyon. \nIn the west stand the small mountains of the\n"Beaujolais" where the famous wine is produced.\nIt is also the town where Stellarium was born :)
+description = Guéreins is a small french village in the Valley \nof the Saône river, 50 km North of Lyon. \nIn the west stand the small mountains of the\n"Beaujolais" where the famous wine is produced.\nIt is also the town where Stellarium was born :)
 type = old_style
 nbsidetex = 8
 tex0 = landscapes/guereins4.png
@@ -37,17 +37,23 @@ draw_ground_first = 1
 
 [trees]
 name = Trees
+author = Robert Spearman
+description = ?
 type = fisheye
 maptex = landscapes/trees_512.png
 texturefov = 210
 
 [moon]
 name = Moon
+author = ?
+description = ?
 type = spherical
 maptex = landscapes/apollo17.png
 
 [hurricane]
 name = Hurricane
+author = Johan Meuris?
+description = ?
 type = old_style
 nbsidetex = 8
 tex0 = landscapes/hurricane5.png
@@ -84,6 +90,7 @@ draw_ground_first = 1
 [hogerielen]
 name = HogeRielen
 author = Johan Meuris
+description = ?
 type = old_style
 nbsidetex = 7
 tex0 = landscapes/HR7.png
