fixed orbits not fading

--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -38,7 +38,7 @@ draw_ground_first = 1
 [trees]
 name = Trees
 author = Robert Spearman
-description = ?
+description = Trees in Greenlake Park, Seattle
 type = fisheye
 maptex = landscapes/trees_512.png
 texturefov = 210
@@ -52,8 +52,8 @@ maptex = landscapes/apollo17.png
 
 [hurricane]
 name = Hurricane
-author = Johan Meuris?
-description = ?
+author = Johan Meuris and Robert Spearman
+description = An edited view from Hurricane Ridge in Olympic National Park, Washington.  In reality there is an expansive view of the rest of the Olympic range to the South but lighting conditions were poor.
 type = old_style
 nbsidetex = 8
 tex0 = landscapes/hurricane5.png
