--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -36,6 +36,9 @@ scaling_factor                 = 0.8
 sky_culture                    = western
 sky_locale                     = system
 app_locale                     = system
+time_zone                      = system_default
+time_display_format            = system_default
+date_display_format            = system_default
 
 [stars]
 star_scale                     = 1.100000023841858
@@ -103,27 +106,6 @@ planet_names_color             = 0.8,0.2,0.2
 planet_orbits_color            = 0.8,0.2,0.2
 object_trails_color            = 1,0.7,0
 chart_color                    = 1,1,1
-
-[chart_color]
-gui_base_color                 = 0.7,0.2,0.1
-gui_text_color                 = 0.9,0.4,0.2
-azimuthal_color                = 0.8,0.1,0.1
-equatorial_color               = 0.8,0.1,0.1
-equator_color                  = 0.8,0.2,0.2
-ecliptic_color                 = 0.8,0.2,0.2
-meridian_color                 = 0.2,0.8,0.2
-const_lines_color              = 0.8,0.2,0.2
-const_names_color              = 0.8,0.2,0.2
-const_boundary_color           = 0.8,0.3,0.3
-nebula_label_color             = 0.8,0.2,0.2
-nebula_circle_color            = 0.8,0.2,0.2
-star_label_color               = 0.8,0.2,0.2
-star_circle_color              = 0.8,0.2,0.2
-cardinal_color                 = 0.9,0.4,0.4
-planet_names_color             = 0.8,0.2,0.2
-planet_orbits_color            = 0.8,0.2,0.2
-object_trails_color            = 1,0.7,0
-chart_color                    = 0,0,0
 
 [tui]
 flag_enable_tui_menu           = true
