buttons for vertical/horizontal flipping, disabled by default

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -59,6 +59,7 @@ flag_show_date                 = true
 flag_show_appname              = true
 flag_show_fov                  = true
 flag_show_selected_object_info = true
+flag_show_flip_buttons         = false
 base_font_size                 = 14
 base_font_name                 = DejaVuSans.ttf
 flag_show_script_bar           = false
