--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -45,7 +45,7 @@ lighting = true
 albedo = 0.77
 rot_periode = 5832.479839
 rot_rotation_offset = 137.45
-rot_obliquity = -178.78
+rot_obliquity = 178.78
 #rot_equator_ascending_node = 300.22
 sidereal_period = 224.70
 
@@ -81,8 +81,9 @@ coord_func = lunar_special
 lighting = true
 albedo = 0.12
 rot_periode = 655.7198811
-rot_rotation_offset = 308
+rot_rotation_offset = 38
 rot_obliquity = 23.45
+rot_equator_ascending_node = 0
 
 [mars]
 name = Mars
@@ -147,7 +148,7 @@ coord_func = jupiter_special
 lighting = true
 albedo = 0.51
 rot_periode = 9.927953
-rot_rotation_offset = 151
+rot_rotation_offset = 250 #just some value good for GRS #old:151
 rot_obliquity = 2.222461
 rot_equator_ascending_node = -22.203
 sidereal_period = 4331.87
