Removed wrong config files, applied MacOSX patch, fixed minor bug.

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -9,6 +9,7 @@ screen_h                       = 768
 bbp_mode                       = 32
 horizontal_offset              = 0
 vertical_offset                = 0
+minimum_fps                    = 1
 maximum_fps                    = 10000
 distorter                      = none
 
@@ -173,6 +174,8 @@ milky_way_intensity            = 1
 flag_bright_nebulae            = false
 flag_nebula_ngc                = false
 meteor_rate	                   = 10
+flag_telescopes                = false
+flag_telescope_name            = false
 
 [init_location]
 name                           = Paris
