--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -53,7 +53,7 @@ maptex = landscapes/apollo17.png
 [hurricane]
 name = Hurricane
 author = Johan Meuris and Robert Spearman
-description = An edited view from Hurricane Ridge in Olympic National Park, Washington.  In reality there is an expansive view of the rest of the Olympic range to the South but lighting conditions were poor.
+description = An edited view from Hurricane Ridge in Olympic \nNational Park, Washington.  In reality there is an \nexpansive view of the rest of the Olympic range to \nthe South but lighting conditions were poor.
 type = old_style
 nbsidetex = 8
 tex0 = landscapes/hurricane5.png
