--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -3,6 +3,6 @@ pkgdatadir = $(datadir)/@PACKAGE@/data
 pkgdata_DATA = icon.bmp stellarium.ico landscapes.ini ssystem.ini name.fab \
 	zone.tab hipparcos.fab cities.fab DejaVuSans.ttf ngc2000.dat double_txt.dat \
 	variable_txt.dat ngc2000names.dat default_config.ini nebula_textures.fab \
-	DejaVuSansMono.ttf constellations_boundaries.dat fontmap.dat
+	DejaVuSansMono.ttf constellations_boundaries.dat fontmap.dat iso639-1.utf8
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
 SUBDIRS = sky_cultures scripts
