--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -87,20 +87,21 @@ fog_alt_angle = 33
 fog_angle_shift = -6
 draw_ground_first = 1
 
-[hogerielen]
-name = HogeRielen
-author = Johan Meuris
-description = ?
+[Ocean]
+name = Ocean
+author = Mike
+description = Made with Terragen.
 type = old_style
-nbsidetex = 7
-tex0 = landscapes/HR7.png
-tex1 = landscapes/HR6.png
-tex2 = landscapes/HR5.png
-tex3 = landscapes/HR4.png
-tex4 = landscapes/HR3.png
-tex5 = landscapes/HR2.png
-tex6 = landscapes/HR1.png
-nbside = 7
+nbsidetex = 8
+tex0 = landscapes/ocean1.png
+tex1 = landscapes/ocean2.png
+tex2 = landscapes/ocean3.png
+tex3 = landscapes/ocean4.png
+tex4 = landscapes/ocean5.png
+tex5 = landscapes/ocean6.png
+tex6 = landscapes/ocean7.png
+tex7 = landscapes/ocean8.png
+nbside = 8
 side0 = tex0:0:0.005:1:1
 side1 = tex1:0:0.005:1:1
 side2 = tex2:0:0.005:1:1
@@ -109,16 +110,16 @@ side4 = tex4:0:0.005:1:1
 side5 = tex5:0:0.005:1:1
 side6 = tex6:0:0.005:1:1
 side7 = tex7:0:0.005:1:1
-groundtex = landscapes/HRb.png
+groundtex = landscapes/ocean9.png
 ground = groundtex:0:0:1:1
 fogtex = fog.png
 fog = fogtex:0:0:1:1
 nb_decor_repeat = 1
-decor_alt_angle = 90
-decor_angle_shift = -25
-decor_angle_rotatez = 0
-ground_angle_shift = -24
-ground_angle_rotatez = 45
-fog_alt_angle = 0
-fog_angle_shift = 0
+decor_alt_angle = 45
+decor_angle_shift = -44.5
+decor_angle_rotatez = 180
+ground_angle_shift = -44.5
+ground_angle_rotatez = 90
+fog_alt_angle = 40
+fog_angle_shift = -6
 draw_ground_first = 1
