Added clouds to earth texture

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -56,7 +56,7 @@ radius = 6378.14
 oblateness = 0.00335364
 halo = true
 color = 0.7,0.8,1.2
-tex_map = earthmap.png
+tex_map = earth-clouds.jpg
 tex_halo = star16x16.png
 coord_func = earth_special
 lighting = true
