constellationsart.fab star_names.fab

--- a/data/sky_cultures/inuit/Makefile.am
+++ b/data/sky_cultures/inuit/Makefile.am
@@ -1,3 +1,4 @@
 pkgdatadir = $(datadir)/@PACKAGE@/data/sky_cultures/inuit
-pkgdata_DATA = constellation_names.eng.fab constellationship.fab info.ini
+pkgdata_DATA = constellation_names.eng.fab constellationship.fab \
+               constellationsart.fab star_names.fab info.ini
 EXTRA_DIST = $(pkgdata_DATA)
