replaced hipparcos.fab with stars*.cat

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,7 +1,9 @@
 man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
 pkgdata_DATA = icon.bmp stellarium.ico landscapes.ini ssystem.ini name.fab \
-	zone.tab hipparcos.fab cities.fab DejaVuSans.ttf ngc2000.dat double_txt.dat \
+	stars0.cat stars1.cat stars2.cat stars3.cat \
+    stars_hip_component_ids.cat stars_hip_sp.cat \
+	zone.tab cities.fab DejaVuSans.ttf ngc2000.dat double_txt.dat \
 	variable_txt.dat ngc2000names.dat default_config.ini nebula_textures.fab \
 	DejaVuSansMono.ttf constellations_boundaries.dat fontmap.dat iso639-1.utf8
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
