configurable horizontal/vertical image flipping for spheric mirror calculation

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -32,6 +32,8 @@ mirror_radius                  = 0.25
 dome_radius                    = 2.5
 zenith_y                       = 0.125
 scaling_factor                 = 0.8
+flip_horz                      = true
+flip_vert                      = false
 
 [localization]
 sky_culture                    = western
