Moved color scheme management as a standard Stelmodule feature.

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -70,6 +70,7 @@ mouse_cursor_timeout           = 0
 flag_script_allow_ui           = false
 
 [color]
+default_color				   = 0.458,0.509,0.671
 gui_base_color                 = 0.458,0.509,0.671
 gui_text_color                 = 0.8,0.87,0.87
 azimuthal_color                = 0.3,0.2,0.1
@@ -89,6 +90,7 @@ planet_orbits_color            = 0.69,0.2,0.2
 object_trails_color            = 1,0.7,0
 
 [night_color]
+default_color				   = 0.458,0.509,0.671
 gui_base_color                 = 0.7,0.2,0.1
 gui_text_color                 = 0.9,0.4,0.2
 azimuthal_color                = 0.3,0.2,0.1
