--- a/data/default_config_dome.ini
+++ b/data/default_config_dome.ini
@@ -39,6 +39,7 @@ base_font_size				   = 18
 flag_show_script_bar           = false
 
 [color]
+default_color				   = 0.458,0.509,0.671
 azimuthal_color                = 0.0,1.0,1.0
 equatorial_color               = 0.5,1.0,0.5
 equator_color                  = 1.0,0.2,0.2
