--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,16 +1,16 @@
 src/main.cpp
 src/LandscapeMgr.cpp
-src/constellation.cpp
-src/constellation_mgr.cpp
-src/hip_star_mgr.cpp
-src/landscape.cpp
-src/nebula.cpp
-src/nebula_mgr.cpp
+src/Constellation.cpp
+src/ConstellationMgr.cpp
+src/StarMgr.cpp
+src/Nandscape.cpp
+src/Nebula.cpp
+src/NebulaMgr.cpp
 src/Observer.cpp
-src/planet.cpp
+src/Planet.cpp
 src/stel_ui.cpp
 src/stel_ui_conf.cpp
-src/solarsystem.cpp
+src/SolarSystem.cpp
 src/StelCore.cpp
 src/stel_ui_tuiconf.cpp
 src/translations.h
