--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,7 +3,7 @@ src/LandscapeMgr.cpp
 src/Constellation.cpp
 src/ConstellationMgr.cpp
 src/StarMgr.cpp
-src/Nandscape.cpp
+src/Landscape.cpp
 src/Nebula.cpp
 src/NebulaMgr.cpp
 src/Observer.cpp
