First stage of the data file location changes. Landscapes files now install to .../stellarium/landscapes/... in sub-directories (one per landscape). Landscapes may also be installed in the user's personal directory (~/.stellarium/landscapes/ on Linux).
landscapes.ini is no longer used.  New landscape.ini files per landscape
have been created, with the path to the textures removed.

--- a/textures/Makefile.am
+++ b/textures/Makefile.am
@@ -25,4 +25,4 @@ pkgdata_DATA = mercury.png venus.png earth-clouds.jpg earthmap.png mars.png jupi
 		bt_fwd.png bt_now.png bt_realtime.png bt_rwd.png starc64x64.png bt_azgrid.png \
 		bt_eqgrid.png telescope.png bt_flip_horz.png bt_flip_vert.png h1990-20.png
 EXTRA_DIST = $(pkgdata_DATA)
-SUBDIRS = landscapes constellation-art
+SUBDIRS = constellation-art
