Refactoring/renaming and improved safety in StelViewportEffect code.

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -18,7 +18,8 @@ horizontal_offset              = 0
 vertical_offset                = 0
 minimum_fps                    = 18
 maximum_fps                    = 10000
-viewport_effect                = none
+viewport_effect                = sphericMirrorDistorter
+#viewport_effect                = none
 
 [projection]
 type                           = ProjectionStereographic
