--- a/po/stellarium/CMakeLists.txt
+++ b/po/stellarium/CMakeLists.txt
@@ -2,7 +2,7 @@ SET(stellarium_DOMAIN stellarium)
 SET(stellarium_POT ${stellarium_DOMAIN}.pot)
 
 GETTEXT_CREATE_TRANSLATIONS(${stellarium_DOMAIN} DEFAULT_TARGET
-    af ar az be bg bn bo br bs ca cs cy da de dv el en_AU en_CA en_GB en eo es et eu fa fil fi fr fy ga gl gu gv haw he hi hr hrx hu hy ia id is it ja ka kn ko ky lt lv mk ml mr ms mt mi nan nb nl nn oc pl pt_BR pt ro ru sco se si sk sl sq sr su sv ta te th tl tr uk vi zh_CN zh_HK zh_TW
+    af ar ast az be bg bn bo br bs ca cs cy da de dv el en en_AU en_CA en_GB eo es et eu fa fi fil fr fy ga gl gu gv haw he hi hr hrx hu hy ia id is it ja ka kn ko ky lt lv mi mk ml mr ms mt nan nb nl nn oc pl pt pt_BR ro ru sco se si sk sl sq sr su sv ta te th tl tr uk vi zh_CN zh_HK zh_TW
 )
 
 ADD_CUSTOM_TARGET(
