added GUI to Exoplanets plug-in

--- a/plugins/Exoplanets/src/CMakeLists.txt
+++ b/plugins/Exoplanets/src/CMakeLists.txt
@@ -1,4 +1,9 @@
-INCLUDE_DIRECTORIES(.)
+INCLUDE_DIRECTORIES(
+    .
+    gui
+    ${CMAKE_BINARY_DIR}/plugins/Exoplanets/src
+    ${CMAKE_BINARY_DIR}/plugins/Exoplanets/src/gui
+)
 
 LINK_DIRECTORIES(${BUILD_DIR}/src)
 
@@ -6,13 +11,23 @@ SET(Exoplanets_SRCS
   Exoplanets.hpp
   Exoplanets.cpp
   Exoplanet.hpp
-  Exoplanet.cpp)
+  Exoplanet.cpp
+  gui/ExoplanetsDialog.hpp
+  gui/ExoplanetsDialog.cpp
+)
+
+SET(ExoplanetsDialog_UIS
+  gui/exoplanetsDialog.ui
+)
+QT4_WRAP_UI(ExoplanetsDialog_UIS_H ${ExoplanetsDialog_UIS})
 
 SET(Exoplanets_RES ../resources/Exoplanets.qrc)
 QT4_ADD_RESOURCES(Exoplanets_RES_CXX ${Exoplanets_RES})
 
 SET(Exoplanets_MOC_HDRS
- Exoplanets.hpp)
+ Exoplanets.hpp
+ gui/ExoplanetsDialog.hpp
+)
 
 QT4_WRAP_CPP(Exoplanets_MOC_SRCS ${Exoplanets_MOC_HDRS})
 
@@ -20,7 +35,7 @@ SET(extLinkerOption ${QT_LIBRARIES} ${JPEG_LIBRARIES} ${PNG_LIBRARIES} ${OPENGL_
 
 ############### For building the dynamic library ######################
 IF(BUILD_DYNAMIC_PLUGINS)
-	ADD_LIBRARY(Exoplanets MODULE ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX})
+	ADD_LIBRARY(Exoplanets MODULE ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX} ${ExoplanetsDialog_UIS_H})
 	IF(APPLE)
 		FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
 		MARK_AS_ADVANCED(OPENGL_LIBRARY)
@@ -40,7 +55,7 @@ ENDIF()
 
 ############### For building the static library ######################
 IF(BUILD_STATIC_PLUGINS)
-	ADD_LIBRARY(Exoplanets-static STATIC ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX})
+	ADD_LIBRARY(Exoplanets-static STATIC ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX} ${ExoplanetsDialog_UIS_H})
 	SET_TARGET_PROPERTIES(Exoplanets-static PROPERTIES OUTPUT_NAME "Exoplanets")
 	TARGET_LINK_LIBRARIES(Exoplanets-static ${extLinkerOption})
 	SET_TARGET_PROPERTIES(Exoplanets-static PROPERTIES COMPILE_FLAGS "-DQT_STATICPLUGIN")
