StelTextureParams are now API-independent, and StelTextureMgr now has access to StelRenderer.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -148,6 +148,7 @@ SET(stellarium_lib_SRCS
 	core/renderer/StelVertexBufferBackend.hpp
 	core/renderer/StelTestQGL2VertexBufferBackend.cpp
 	core/renderer/StelTestQGL2VertexBufferBackend.hpp
+	core/renderer/StelTextureParams.hpp
 
 	${gl_lib_SRCS}
 	core/external/fixx11h.h
