Massive changes, mostly texture related.
Textures:
  - Completely rewrote texturing code.
  - GL-specific texture code was isolated behind an interface,  
    StelTextureBackend, wrapped by StelTexture.
  - StelTextureBackend might later be renamed to and replace
    StelTexture as it has a better interface (e.g. precisely defined 
    states), but that requires also changing code that uses 
    StelTexture.
  - Fixed some bugs in texture code.
  - Removed unused texture features. Some might be re-added,
    but some (e.g. replacing image of existing texture) go against
    the new API.
  - Code is now consistent with its documentation.

StelQGL2Renderer:
  - Error messages at shader loading failures.

GL utility functions:
  - Consistent naming scheme
  - Conversion of GL error codes to strings.
  - Determining OpenGL pixel format for a QImage
  - Forcing image to fit into maximum texture size 
    (needs more robust code, will be rewritten)
  - Getting full filesystem path of a texture 
    (GL specific due to compressed texture).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -135,6 +135,7 @@ SET(stellarium_lib_SRCS
 
 	core/renderer/StelRenderer.hpp
 	core/renderer/StelGLRenderer.hpp
+	core/renderer/StelQGLRenderer.cpp
 	core/renderer/StelQGLRenderer.hpp
 	core/renderer/StelQGL2Renderer.hpp
 	
@@ -149,6 +150,10 @@ SET(stellarium_lib_SRCS
 	core/renderer/StelTestQGL2VertexBufferBackend.cpp
 	core/renderer/StelTestQGL2VertexBufferBackend.hpp
 	core/renderer/StelTextureParams.hpp
+	core/renderer/StelTextureBackend.hpp
+	core/renderer/StelQGLTextureBackend.cpp
+	core/renderer/StelQGLTextureBackend.hpp
+	core/renderer/StelTextureLoader.hpp
 
 	${gl_lib_SRCS}
 	core/external/fixx11h.h
@@ -371,6 +376,9 @@ SET(stellarium_MOC_HDRS
 	core/StelSkyLayer.hpp
 	core/StelSkyCultureMgr.hpp
 	core/SimbadSearcher.hpp
+	core/renderer/StelTextureBackend.hpp
+	core/renderer/StelQGLTextureBackend.hpp
+	core/renderer/StelTextureLoader.hpp
 	core/modules/ConstellationMgr.hpp
 	core/modules/GridLinesMgr.hpp
 	core/modules/LabelMgr.hpp
