added GUI to Pulsars plug-in

--- a/po/stellarium/POTFILES.in
+++ b/po/stellarium/POTFILES.in
@@ -81,3 +81,5 @@ plugins/Quasars/src/Quasars.cpp
 plugins/Quasars/src/Quasar.cpp
 plugins/Pulsars/src/Pulsars.cpp
 plugins/Pulsars/src/Pulsar.cpp
+plugins/Pulsars/src/gui/PulsarsDialog.cpp
+plugins/Pulsars/src/ui_pulsarsDialog.h
