--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,40 @@ IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   SET(APPLE 1)
 ENDIF()
 
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+ EXEC_PROGRAM(${CMAKE_C_COMPILER} ARGS "-v" OUTPUT_VARIABLE _clang_version_info)
+ STRING(REGEX REPLACE "^.*[ ]([0-9]+)\\.[0-9].*$" "\\1" CLANG_MAJOR "${_clang_version_info}")
+ STRING(REGEX REPLACE "^.*[ ][0-9]+\\.([0-9]).*$" "\\1" CLANG_MINOR "${_clang_version_info}")
+ MESSAGE(STATUS "Found Clang ${CLANG_MAJOR}.${CLANG_MINOR}")
+ELSE()
+ SET(CLANG_MAJOR 0)
+ SET(CLANG_MINOR 0)
+ENDIF()
+ADD_DEFINITIONS(-DCLANG_VERSION="${CLANG_MAJOR}.${CLANG_MINOR}")
+
+IF(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_GNUCC)
+ EXEC_PROGRAM(${CMAKE_C_COMPILER} ARGS "-dumpversion" OUTPUT_VARIABLE _gcc_version_info)
+ STRING(REGEX REPLACE "^([0-9]+).*$"                   "\\1" GCC_MAJOR ${_gcc_version_info})
+ STRING(REGEX REPLACE "^[0-9]+\\.([0-9]+).*$"          "\\1" GCC_MINOR ${_gcc_version_info})
+ STRING(REGEX REPLACE "^[0-9]+\\.[0-9]+\\.([0-9]+).*$" "\\1" GCC_PATCH ${_gcc_version_info})
+
+ IF(GCC_PATCH MATCHES "\\.+")
+  SET(GCC_PATCH "")
+ ENDIF()
+ IF(GCC_MINOR MATCHES "\\.+")
+  SET(GCC_MINOR "")
+ ENDIF()
+ IF(GCC_MAJOR MATCHES "\\.+")
+  SET(GCC_MAJOR "")
+ ENDIF()
+ MESSAGE(STATUS "Found GCC ${GCC_MAJOR}.${GCC_MINOR}")
+ SET(COMPILER_VERSION gcc${GCC_MAJOR}${GCC_MINOR}${GCC_PATCH})
+ELSE()
+ SET(GCC_MAJOR 0)
+ SET(GCC_MINOR 0)
+ENDIF()
+ADD_DEFINITIONS(-DGCC_VERSION="${GCC_MAJOR}.${GCC_MINOR}")
+
 IF(UNIX AND NOT WIN32)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wno-unused-parameter")       # additional C compile flags
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")     # additional CPP compile flags
