--- a/plugins/Satellites/src/CMakeLists.txt
+++ b/plugins/Satellites/src/CMakeLists.txt
@@ -82,11 +82,11 @@ IF(BUILD_STATIC_PLUGINS)
 	# The library target "Satellites-static" has a default OUTPUT_NAME of "Satellites-static", so change it.
 	SET_TARGET_PROPERTIES(Satellites-static PROPERTIES OUTPUT_NAME "Satellites")
 	TARGET_LINK_LIBRARIES(Satellites-static ${StelMain} ${extLinkerOption})
-	IF("${GCC_VERSION}" VERSION_GREATER "4.6" OR "${GCC_VERSION}" VERSION_EQUAL "4.6")
+	IF("${GCC_VERSION}" VERSION_GREATER "4.5")
 	    SET_TARGET_PROPERTIES(Satellites-static PROPERTIES COMPILE_FLAGS "-DQT_STATICPLUGIN -Wno-unused-parameter -Wno-unused-but-set-parameter -Wno-unused-but-set-variable")
-	ELSE()
+	ELSE("${GCC_VERSION}" VERSION_GREATER "4.5")
             SET_TARGET_PROPERTIES(Satellites-static PROPERTIES COMPILE_FLAGS "-DQT_STATICPLUGIN -Wno-unused-parameter")
-        ENDIF()
+        ENDIF("${GCC_VERSION}" VERSION_GREATER "4.5")
 	ADD_DEPENDENCIES(AllStaticPlugins Satellites-static)
 ENDIF()
 
