fixed issues for cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ ELSE()
  SET(CLANG_MAJOR 0)
  SET(CLANG_MINOR 0)
 ENDIF()
-ADD_DEFINITIONS(-DCLANG_VERSION="${CLANG_MAJOR}.${CLANG_MINOR}")
+SET(CLANG_VERSION "${CLANG_MAJOR}.${CLANG_MINOR}")
 
 IF(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_GNUCC)
  EXEC_PROGRAM(${CMAKE_C_COMPILER} ARGS "-dumpversion" OUTPUT_VARIABLE _gcc_version_info)
@@ -81,7 +81,7 @@ ELSE()
  SET(GCC_MAJOR 0)
  SET(GCC_MINOR 0)
 ENDIF()
-ADD_DEFINITIONS(-DGCC_VERSION="${GCC_MAJOR}.${GCC_MINOR}")
+SET(GCC_VERSION "${GCC_MAJOR}.${GCC_MINOR}")
 
 IF(UNIX AND NOT WIN32)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wno-unused-parameter")       # additional C compile flags
