--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -24,11 +24,11 @@ ADD_CUSTOM_COMMAND(
   DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/stellarium.1
 )
 
-IF(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
+IF(CMAKE_SYSTEM_NAME MATCHES "(FreeBSD|NetBSD)")
   INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/stellarium.1 DESTINATION man/man1)
-ELSE()
+ELSE(CMAKE_SYSTEM_NAME MATCHES "(FreeBSD|NetBSD)")
   INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/stellarium.1 DESTINATION share/man/man1)
-ENDIF()
+ENDIF(CMAKE_SYSTEM_NAME MATCHES "(FreeBSD|NetBSD)")
 
 ENDIF(UNIX AND NOT WIN32)
 
