Separated all viewport and FBO code into StelQGLViewport.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -129,6 +129,8 @@ SET(stellarium_lib_SRCS
 	core/StelLoadingBar.hpp
 
 	core/renderer/StelRenderer.hpp
+	core/renderer/StelQGLViewport.cpp
+	core/renderer/StelQGLViewport.hpp
 	core/renderer/StelQGLRenderer.cpp
 	core/renderer/StelQGLRenderer.hpp
 	core/renderer/StelQGL2Renderer.hpp
