--- a/po/stellarium/POTFILES.in
+++ b/po/stellarium/POTFILES.in
@@ -46,6 +46,7 @@ plugins/AngleMeasure/src/AngleMeasure.cpp
 plugins/CompassMarks/src/CompassMarks.cpp
 plugins/Oculars/src/Oculars.cpp
 plugins/Oculars/src/gui/OcularsGuiPanel.cpp
+plugins/Oculars/src/gui/OcularDialog.cpp
 plugins/Oculars/src/ui_ocularDialog.h
 plugins/Satellites/src/Satellites.cpp
 plugins/Satellites/src/Satellite.cpp
