added GUI to plug-in Hisorical Supernovae

--- a/po/stellarium/POTFILES.in
+++ b/po/stellarium/POTFILES.in
@@ -78,6 +78,8 @@ plugins/SolarSystemEditor/src/ui_mpcImportWindow.h
 plugins/SolarSystemEditor/src/ui_solarSystemManagerWindow.h
 plugins/Supernovae/src/Supernovae.cpp
 plugins/Supernovae/src/Supernova.cpp
+plugins/Supernovae/src/gui/SupernovaeDialog.cpp
+plugins/Supernovae/src/ui_supernovaeDialog.h
 plugins/Quasars/src/Quasars.cpp
 plugins/Quasars/src/Quasar.cpp
 plugins/Pulsars/src/Pulsars.cpp
