added GUI to Quasars plug-in

--- a/po/stellarium/POTFILES.in
+++ b/po/stellarium/POTFILES.in
@@ -82,6 +82,8 @@ plugins/Supernovae/src/gui/SupernovaeDialog.cpp
 plugins/Supernovae/src/ui_supernovaeDialog.h
 plugins/Quasars/src/Quasars.cpp
 plugins/Quasars/src/Quasar.cpp
+plugins/Quasars/src/gui/QuasarsDialog.cpp
+plugins/Quasars/src/ui_quasarsDialog.h
 plugins/Pulsars/src/Pulsars.cpp
 plugins/Pulsars/src/Pulsar.cpp
 plugins/Pulsars/src/gui/PulsarsDialog.cpp
