--- a/plugins/Exoplanets/src/CMakeLists.txt
+++ b/plugins/Exoplanets/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 INCLUDE_DIRECTORIES(
     .
-    gui
+#    gui
     ${CMAKE_BINARY_DIR}/plugins/Exoplanets/src
-    ${CMAKE_BINARY_DIR}/plugins/Exoplanets/src/gui
+#    ${CMAKE_BINARY_DIR}/plugins/Exoplanets/src/gui
 )
 
 LINK_DIRECTORIES(${BUILD_DIR}/src)
@@ -12,21 +12,21 @@ SET(Exoplanets_SRCS
   Exoplanets.cpp
   Exoplanet.hpp
   Exoplanet.cpp
-  gui/ExoplanetsDialog.hpp
-  gui/ExoplanetsDialog.cpp
+#  gui/ExoplanetsDialog.hpp
+#  gui/ExoplanetsDialog.cpp
 )
 
-SET(ExoplanetsDialog_UIS
-  gui/exoplanetsDialog.ui
-)
-QT4_WRAP_UI(ExoplanetsDialog_UIS_H ${ExoplanetsDialog_UIS})
+#SET(ExoplanetsDialog_UIS
+#  gui/exoplanetsDialog.ui
+#)
+#QT4_WRAP_UI(ExoplanetsDialog_UIS_H ${ExoplanetsDialog_UIS})
 
 SET(Exoplanets_RES ../resources/Exoplanets.qrc)
 QT4_ADD_RESOURCES(Exoplanets_RES_CXX ${Exoplanets_RES})
 
 SET(Exoplanets_MOC_HDRS
  Exoplanets.hpp
- gui/ExoplanetsDialog.hpp
+# gui/ExoplanetsDialog.hpp
 )
 
 QT4_WRAP_CPP(Exoplanets_MOC_SRCS ${Exoplanets_MOC_HDRS})
@@ -35,7 +35,8 @@ SET(extLinkerOption ${QT_LIBRARIES} ${JPEG_LIBRARIES} ${PNG_LIBRARIES} ${OPENGL_
 
 ############### For building the dynamic library ######################
 IF(BUILD_DYNAMIC_PLUGINS)
-	ADD_LIBRARY(Exoplanets MODULE ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX} ${ExoplanetsDialog_UIS_H})
+#	ADD_LIBRARY(Exoplanets MODULE ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX} ${ExoplanetsDialog_UIS_H})
+	ADD_LIBRARY(Exoplanets MODULE ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX})
 	IF(APPLE)
 		FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
 		MARK_AS_ADVANCED(OPENGL_LIBRARY)
@@ -55,7 +56,8 @@ ENDIF()
 
 ############### For building the static library ######################
 IF(BUILD_STATIC_PLUGINS)
-	ADD_LIBRARY(Exoplanets-static STATIC ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX} ${ExoplanetsDialog_UIS_H})
+#	ADD_LIBRARY(Exoplanets-static STATIC ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX} ${ExoplanetsDialog_UIS_H})
+	ADD_LIBRARY(Exoplanets-static STATIC ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX})
 	SET_TARGET_PROPERTIES(Exoplanets-static PROPERTIES OUTPUT_NAME "Exoplanets")
 	TARGET_LINK_LIBRARIES(Exoplanets-static ${extLinkerOption})
 	SET_TARGET_PROPERTIES(Exoplanets-static PROPERTIES COMPILE_FLAGS "-DQT_STATICPLUGIN")
