Added first index buffer implementation (plain index array).
Stars/point sources are now drawn with index buffers.

Also minor cleanup and documentation improvements.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -140,6 +140,7 @@ SET(stellarium_lib_SRCS
 	core/renderer/StelGLUtilityFunctions.hpp
 
 	core/renderer/StelIndexBuffer.hpp
+	core/renderer/StelQGLIndexBuffer.hpp
 	core/renderer/StelVertexAttribute.cpp
 	core/renderer/StelVertexAttribute.hpp
 	core/renderer/StelVertexBuffer.hpp
