added atmospheres for Galilean moons of Jupiter

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -180,6 +180,7 @@ rot_periode = 42.45930719
 rot_rotation_offset = 220.8
 rot_obliquity = 0.0
 coord_func = io_special
+atmosphere = 1
 
 [europa]
 name = Europa
@@ -196,6 +197,7 @@ rot_periode = 85.22834590
 rot_rotation_offset = 56.2
 coord_func = europa_special
 orbit_visualization_period = 3.5
+atmosphere = 1
 
 [ganymede]
 name = Ganymede
@@ -213,6 +215,7 @@ rot_obliquity = 0.1
 #rot_equator_ascending_node = 161.6
 coord_func = ganymede_special
 orbit_visualization_period = 7.1
+atmosphere = 1
 
 [callisto]
 name = Callisto
@@ -230,6 +233,7 @@ rot_obliquity = 0.4
 #rot_equator_ascending_node = 160.6
 coord_func = calisto_special
 orbit_visualization_period = 16.7
+atmosphere = 1
 
 [amalthea]
 name = Amalthea
