Added a circle arc drawing class built on top of Renderer.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -138,6 +138,8 @@ SET(stellarium_lib_SRCS
 	core/renderer/StelQGLRenderer.hpp
 	core/renderer/StelQGL2Renderer.hpp
 	
+	core/renderer/StelCircleArcRenderer.hpp
+
 	core/renderer/StelGLUtilityFunctions.cpp
 	core/renderer/StelGLUtilityFunctions.hpp
 
