set names for libintl and libiconv for win32 and win64 apps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -342,9 +342,13 @@ IF(WIN32)
   IF ("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
     SET(ISS_ARCHITECTURE_SPECIFIC ";In the 64-bit only version, this line switches the installer to 64-bit mode.")
     SET(ISS_PACKAGE_PLATFORM "win32")
+    SET(ISS_ARCH_SPECIFIC_INTL_LIB "libintl3.dll")
+    SET(ISS_ARCH_SPECIFIC_ICONV_LIB "libiconv2.dll")
   ELSEIF ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
     SET(ISS_ARCHITECTURE_SPECIFIC ";Make the installer run only on win64:\nArchitecturesAllowed=x64\n;Switch to 64-bit install mode:\nArchitecturesInstallIn64BitMode=x64")
     SET(ISS_PACKAGE_PLATFORM "win64")
+    SET(ISS_ARCH_SPECIFIC_INTL_LIB "libintl-8.dll")
+    SET(ISS_ARCH_SPECIFIC_ICONV_LIB "libiconv-2.dll")
   ENDIF()
   # Try to guess the MinGW /bin directory...
   GET_FILENAME_COMPONENT(MINGW_BIN_DIRECTORY ${CMAKE_CXX_COMPILER} PATH)
