stellarium.iss.cmake: use wildcards for library versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -327,14 +327,14 @@ ENDIF()
 ### [Optional] Embed icon in the Windows executable ###
 IF(WIN32)
   SET(ENABLE_WINDOWS_EXE_ICON 1 CACHE BOOL "Determine if it should try to embed the Stellarium icon in the Windows .exe file")
-  IF(ENABLE_WINDOWS_EXE_ICON)
+  IF(ENABLE_WINDOWS_EXE_ICON AND NOT RC_COMPILER_PATH)
     #The mingGW snapshot distributed with the Qt SDK has it under this name.
     SET(RC_COMPILER_FILENAME "windres.exe")
 	FIND_FILE(RC_COMPILER_PATH ${RC_COMPILER_FILENAME})
     IF (RC_COMPILER_PATH)
      MESSAGE(STATUS "Found .rc compiler: ${RC_COMPILER_PATH}")
     ENDIF(RC_COMPILER_PATH)
-  ENDIF(ENABLE_WINDOWS_EXE_ICON)
+  ENDIF(ENABLE_WINDOWS_EXE_ICON AND NOT RC_COMPILER_PATH)
 ENDIF(WIN32)
 
 ### Generate an Inno Setup project file ###
@@ -342,13 +342,9 @@ IF(WIN32)
   IF ("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
     SET(ISS_ARCHITECTURE_SPECIFIC ";In the 64-bit only version, this line switches the installer to 64-bit mode.")
     SET(ISS_PACKAGE_PLATFORM "win32")
-    SET(ISS_ARCH_SPECIFIC_INTL_LIB "libintl3.dll")
-    SET(ISS_ARCH_SPECIFIC_ICONV_LIB "libiconv2.dll")
   ELSEIF ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
     SET(ISS_ARCHITECTURE_SPECIFIC ";Make the installer run only on win64:\nArchitecturesAllowed=x64\n;Switch to 64-bit install mode:\nArchitecturesInstallIn64BitMode=x64")
     SET(ISS_PACKAGE_PLATFORM "win64")
-    SET(ISS_ARCH_SPECIFIC_INTL_LIB "libintl-8.dll")
-    SET(ISS_ARCH_SPECIFIC_ICONV_LIB "libiconv-2.dll")
   ENDIF()
   # Try to guess the MinGW /bin directory...
   GET_FILENAME_COMPONENT(MINGW_BIN_DIRECTORY ${CMAKE_CXX_COMPILER} PATH)
