Moved LandscapeOldStyle::drawGround() to Renderer, adding a buildFanDisk() function.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -152,6 +152,7 @@ SET(stellarium_lib_SRCS
 	core/renderer/StelVertexAttribute.cpp
 	core/renderer/StelVertexAttribute.hpp
 	core/renderer/StelGeometryBuilder.hpp
+	core/renderer/StelGeometryBuilder.cpp
 	core/renderer/GenericVertexTypes.hpp
 
 	core/renderer/StelTextureParams.hpp
