update cmake for using in MinGW GCC 4.6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ IF(UNIX AND NOT WIN32)
 ELSEIF ("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fexceptions -fident -mthreads")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wsign-promo -fexceptions -fident -mthreads")
- SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wsign-promo -fexceptions -fident -mthreads -mwindows --large-address-aware")  # --enable-runtime-pseudo-reloc --verbose
+ SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wsign-promo -fexceptions -fident -mthreads -mwindows")  #  --large-address-aware --enable-runtime-pseudo-reloc --verbose
 ELSEIF ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fexceptions -fident -mthreads")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wsign-promo -fexceptions -fident -mthreads")
@@ -342,11 +342,9 @@ IF(WIN32)
   IF ("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
     SET(ISS_ARCHITECTURE_SPECIFIC ";In the 64-bit only version, this line switches the installer to 64-bit mode.")
     SET(ISS_PACKAGE_PLATFORM "win32")
-    SET(ISS_ARCH_SPECIFIC_MINGW_LIBS "Source: \"@MINGW_BIN_DIRECTORY@/libgcc_s_dw2-1.dll\"; DestDir: \"{app}\";\nSource: \"@MINGW_BIN_DIRECTORY@/mingwm10.dll\"; DestDir: \"{app}\";")
   ELSEIF ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
     SET(ISS_ARCHITECTURE_SPECIFIC ";Make the installer run only on win64:\nArchitecturesAllowed=x64\n;Switch to 64-bit install mode:\nArchitecturesInstallIn64BitMode=x64")
     SET(ISS_PACKAGE_PLATFORM "win64")
-    SET(ISS_ARCH_SPECIFIC_MINGW_LIBS "")
   ENDIF()
   # Try to guess the MinGW /bin directory...
   GET_FILENAME_COMPONENT(MINGW_BIN_DIRECTORY ${CMAKE_CXX_COMPILER} PATH)
