--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ ENDIF()
 # Add valgrind build options if necessary
 IF(${CMAKE_BUILD_TYPE} MATCHES "Valgrind")
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0")
- SET(CMAEK_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
+ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
 ENDIF()
 
 IF(NOT STELLARIUM_SPLASH)
@@ -54,6 +54,8 @@ IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  STRING(REGEX REPLACE "^.*[ ]([0-9]+)\\.[0-9].*$" "\\1" CLANG_MAJOR "${_clang_version_info}")
  STRING(REGEX REPLACE "^.*[ ][0-9]+\\.([0-9]).*$" "\\1" CLANG_MINOR "${_clang_version_info}")
  MESSAGE(STATUS "Found Clang ${CLANG_MAJOR}.${CLANG_MINOR}")
+ SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Woverloaded-virtual")
+ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Woverloaded-virtual")
 ELSE()
  SET(CLANG_MAJOR 0)
  SET(CLANG_MINOR 0)
