Added a class to iterate over triangles in QVectors of vertices (for StelSphereGeometry).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -91,6 +91,7 @@ SET(stellarium_lib_SRCS
 	core/StelFader.hpp
 	core/StelSphereGeometry.cpp
 	core/StelSphereGeometry.hpp
+	core/TriangleIterator.hpp
 	core/OctahedronPolygon.cpp
 	core/OctahedronPolygon.hpp
 	core/StelIniParser.cpp
