OpenGL 1 renderer added.
Everything seems to work correctly, but there is one slight visual difference - 
the fog seems to be a little higher (?) from the starting viewpoint.
Not sure if this is a bug or simply due to different GL functions being used.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -140,6 +140,8 @@ SET(stellarium_lib_SRCS
 	core/renderer/StelVertexBufferBackend.hpp
 	core/renderer/StelQGLArrayVertexBufferBackend.cpp
 	core/renderer/StelQGLArrayVertexBufferBackend.hpp
+	core/renderer/StelQGL1ArrayVertexBufferBackend.cpp
+	core/renderer/StelQGL1ArrayVertexBufferBackend.hpp
 	core/renderer/StelTestQGL2VertexBufferBackend.cpp
 	core/renderer/StelTestQGL2VertexBufferBackend.hpp
 	core/renderer/StelVertexAttribute.cpp
