added calculations and display orbital periods in days for minor planets

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -1291,6 +1291,7 @@ orbit_Eccentricity = 0.0797602
 orbit_ArgOfPericenter = 73.15069
 orbit_AscendingNode = 80.40696
 orbit_Inclination = 10.58671
+type = asteroid
 
 [2pallas]
 name = Pallas
@@ -1313,6 +1314,7 @@ orbit_Eccentricity = 0.2307589
 orbit_ArgOfPericenter = 310.34481
 orbit_AscendingNode = 173.13579
 orbit_Inclination = 34.84182
+type = asteroid
 
 [3juno]
 name = Juno
@@ -1335,6 +1337,7 @@ orbit_Eccentricity = 0.2580231
 orbit_ArgOfPericenter = 247.84192
 orbit_AscendingNode = 170.12007
 orbit_Inclination = 12.97036
+type = asteroid
 
 [4vesta]
 name = Vesta
@@ -1357,6 +1360,7 @@ orbit_Eccentricity = 0.0893657
 orbit_ArgOfPericenter = 150.18003
 orbit_AscendingNode = 103.91841
 orbit_Inclination = 7.13380
+type = asteroid
 
 [136199eris]
 name = Eris
@@ -1380,6 +1384,7 @@ orbit_Eccentricity = 0.4361532
 orbit_ArgOfPericenter = 151.51961
 orbit_AscendingNode = 35.95741
 orbit_Inclination = 44.022944
+type = asteroid
 
 [90377sedna]
 name = Sedna
