Focused shadow map. Currently buggy when turning away so that nothing is in the nth shadow map.

--- a/plugins/Scenery3d/src/CMakeLists.txt
+++ b/plugins/Scenery3d/src/CMakeLists.txt
@@ -11,8 +11,14 @@ SET(Scenery3d_SRCS
 	AABB.cpp
 	Frustum.hpp
 	Frustum.cpp
+	Line.hpp
+	Line.cpp
 	Plane.hpp
 	Plane.cpp
+	SPolygon.hpp
+	SPolygon.cpp
+	Polyhedron.hpp
+	Polyhedron.cpp
     Scenery3d.hpp
     Scenery3d.cpp
     Scenery3dMgr.hpp
